# CiosNations

./: CMakeLists.txt  CiosNations.bat  libnations.pc.in
PHP/: NationItem.php
Python/: Nations.py
Qt/: libnations.pro
docs/: ISO-3166-1.txt  countries.sql  index.html
docs/tw/: index.html
include/: nations.hpp
scripts/: install.bat  prepare.py
src/: countries.cpp  enumerations.cpp  extended.cpp  nation.cpp  region.cpp
